--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "portfolio2025",
   "version": "0.1.0",
-  "homepage": "https://christoph551.github.io/portfolio2025/",
+  "homepage": "https://simmonds-dev.github.io/Portfolio2025/",
   "private": true,
   "dependencies": {
     "cra-template": "1.2.0",
